# vaft

./: .gitignore  .hscfg  CLAUDE.md  CNAME  README.md  _config.yml  hsds_shot.py  index.markdown  pyproject.toml  requirement.txt  requirements.txt  setup.py
.claude/: settings.local.json
.matplotlib/: fontlist-v390.json
.mplconfig/: fontlist-v390.json
VEST/: __init__.py  g039915.00317
_guide/: Equilibrium.md  Examples.md  Installation.md  Magnetics.md  Quick_start_guide.md
_pages/: Equilibrium.md  Installation.md  Magnetics.md  Quick_start_guide.md  about.md  plot.md
_posts/: 2019-04-27-why.md  2019-04-28-howto.md  2019-04-29-license.md  2021-08-10-toc.md  2022-05-24-page_cover.md  2022-06-26-wide_tables.md  2022-06-30-tips_warnings_dangers.md  2023-08-31-mermaid.md  2023-10-14-math-latex.md  2023-12-12-footnotes.md
database/: file.py
docs/: contents.md  load_save_example.md  omas_migration_map.md  omas_schema_contract_draft.md  omas_subagent_migration_plan.md  vaft_import_machine_mapping_issue.md
guide/: Examples.md
notebooks/: README.md  check_routinely_available_data_processing.ipynb  confinement_time_scaling.ipynb  database_initialization_and_load.ipynb  eddy_current_calculation_and_startup_analysis.ipynb  electromagnetic_response_modeling_with_efund.ipynb  fast_camera_video_analysis.ipynb  fluctuation_diagnostics_analysis.ipynb  imas_omas_data_conversion.ipynb  linear_ideal_stability_analysis_with_dcon.ipynb  linear_resistive_stability_analysis_with_rdcon.ipynb  magnetic_diagnostics_processing.ipynb  magnetic_equilibrium_reconstruction_with_efit.ipynb  mhd_equilibrium_analysis.ipynb  multiple_tokamak_comparison.ipynb  perturbed_equilibrium_and_3d_response_with_gpec.ipynb  plotting_sample_using_vaft_plot_module.ipynb  (+10 more)
tools/: config.py  (+4 more)
(+257 files in other folders)
